open telemetry with app trace
